<resources>
    <string name="app_name">CSCB07</string>

    <string name="login_textview">Login</string>
    <string name="login_button">Login</string>
    <string name="signup_link">Sign up</string>

    <string name="signup_textview">Signup</string>
    <string name="signup_button">Signup</string>
    <string name="login_link">Log in</string>

    <string name="error_message">Error Placeholder</string>
    <string name="error_name">Please provide your name</string>
    <string name="error_email">Invalid email address</string>
    <string name="error_password">Invalid password</string>
    <string name="error_user_exists">A user with this email already exists.</string>
    <string name="error_user_not_exists">No such user exists, sign up first.</string>
    <string name="error_wrong_password">No such user exists, sign up first.</string>
    <string name="error_signup_failed">An unexpected error occurred while creating your account.</string>
    <string name="error_login_failed">An unexpected error occurred while logging you in.</string>
    <string name="error_passwords_dont_match">Passwords do not match</string>
    <string name="error_fail_to_get_events">Failed to get events for this venue, try again later!</string>
    <string name="error_empty">This field cannot be empty.</string>
    <string name="error_capacity_value">This field must be greater than 0.</string>
    <string name="error_invalid_date_range">Invalid date range.</string>

    <string name="title_home">Venues</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_logout">Logout</string>

    <string name="hello_blank_fragment">Welcome</string>
    <string name="hello_venues_fragment">Hello venues fragment</string>
    <string name="hello_upcoming_fragment">Hello upcoming fragment</string>
    <string name="hello_bookings_fragment">Hello bookings fragment</string>
    <string name="hello_logout_fragment">Hello logout fragment</string>

    <string name="title_login">Login</string>

    <string name="fab_add_venue">New venue</string>

    <string name="title_venue_name">Venue Name</string>
    <string name="title_add_venue">Add Venue</string>

    <string name="spinner_desc_event_type">Event type</string>

<!--    <string name="hint_event_date">DD/MM/YYYY</string>-->
    <string name="hint_event_name">Event name</string>
    <string name="hint_event_description">Event description</string>
    <string name="dialog_section_start_time">From</string>
    <string name="dialog_section_end_time">To</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>

    <string name="hint_venue_name">Venue name</string>
    <string name="hint_venue_description">Venue description</string>
    <string name="dialog_section_add_sports">Add sports</string>
    <string name="hint_venue_sports">Sports available at venue</string>
    <string name="dialog_section_sports">Sports:</string>
    <string name="button_add">ADD</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype password</string>
    <string name="button_save">Save</string>
    <string name="dialog_select_date">Select date</string>
    <string name="dialog_select_time">Select time</string>
    <string name="hint_max_capacity">Max capacity</string>
    <string name="input_error_empty">Cannot be empty</string>
    <string name="input_error_end_date_valid">End date must come after start date</string>
    <string name="success_event_created">Event created, you will see it when an admin approves it.</string>
    <string name="input_error_capacity_valid">Capacity must be greater than 0</string>

    <string name="button_join">Join</string>
    <string name="button_approve">Approve</string>
    <string name="button_deny">Deny</string>

    <string name="error_fail_to_join_event">Failed to join event</string>
    <string name="fab_add_event">New event</string>
    <string name="error_event_not_found">Event not found</string>
    <string name="error_event_full">Event is fully booked</string>
</resources>
